# uav-simulation

./: .gitignore  Cargo.toml  README.md  start_tmux.sh  tmux_config.yaml
gazebo/: building_robot.sdf  sensor_tutorial.sdf  world_demo.sdf
pid-control/: Cargo.toml
pid-control/src/: main.rs
plots/: .~lock.imu_data.csv#  imu_data.csv
src/flight_controller/: Cargo.toml  package.xml  setup.py
src/flight_controller/controller_config/: xbox_config.yaml
src/flight_controller/flight_controller/: flight_controller.py  pid.py
src/flight_controller/src/: main.rs
src/ros2-keyboard/: SOURCE_INFO.txt
src/uav_sim/: package.xml  setup.cfg  setup.py
src/uav_sim/launch/: simulation.launch.py
src/uav_sim/models/: drone_box.sdf
src/uav_sim/models/parrot_bebop_2/: model.config  model.sdf  old_model.sdf
src/uav_sim/uav_sim/: drone_controller.py  uav_controller.py
src/uav_sim/worlds/: my_world.sdf
