<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>flight_controller</name>
	<version>0.0.0</version>
	<description>Rust-based flight controller for Bebop Parrot 2</description>
	<maintainer email="hpiotrek080@gmail.com">piotrek</maintainer>
	<license>Apache License 2.0</license>

	<buildtool_depend>ament_cargo</buildtool_depend>
	<depend>r2r</depend>

	<export>
		<build_type>ament_cargo</build_type>
	</export>
</package>
